<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TodoActivity">

    <Button
        android:id="@+id/saveTodoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/titleTodoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textTodoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/deadlineTodoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/deadline_yyyy_mm_dd"
        android:inputType="phone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/toggleShareMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/share"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number_to_send_sms"
        android:inputType="date"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/sendSmsToButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>